# LifeAI

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/: settings.local.json
.claude/agents/: blog-writer.md  daily-report-writer.md  idea-writer.md  skill-writer.md
.claude/scripts/: .claude-md-last-run  update-claude-md.sh
.claude/skills/blog/: SKILL.md
.claude/skills/daily-report/: SKILL.md
.claude/skills/gen-skill/: SKILL.md
.claude/skills/idea/: SKILL.md
.claude/skills/insight-report/: SKILL.md
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  setup.sh  whitelist_domains.conf
.githooks/: post-commit  pre-push
core/: Cargo.toml
core/otel-cc/: Cargo.toml  DESIGN.md  Dockerfile
core/otel-cc/infra/: prometheus.yml
core/otel-cc/infra/grafana/provisioning/dashboards/: claude-code.json  dashboards.yaml
core/otel-cc/src/: config.rs  main.rs
core/otel-cc/src/application/: ingest_otlp.rs  insight_analysis.rs  metrics_cache.rs  mod.rs  scan_logs.rs
core/otel-cc/src/domain/: cost.rs  mod.rs  model.rs  port.rs
core/otel-cc/src/infrastructure/: mod.rs
core/otel-cc/src/infrastructure/grafana/: client.rs  mod.rs
core/otel-cc/src/infrastructure/log_reader/: jsonl.rs  mod.rs  scanner.rs
core/otel-cc/src/infrastructure/otlp_reader/: parser.rs
core/otel-cc/src/infrastructure/sqlite/: mod.rs  repository.rs
core/otel-cc/src/infrastructure/watcher/: mod.rs  notify_watcher.rs
core/otel-cc/src/interface/: metrics_handler.rs  mod.rs  otlp_handler.rs  prometheus.rs  stats_handler.rs
(+33 files in other folders)
