[package]
name = "otel-cc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "otel-cc"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"

# HTTP client（Grafana アノテーション送信用）
reqwest = { version = "0.12", features = ["json"] }

# File watching (inotify on Linux)
notify = { version = "6", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
